test/pass/12-model_access.perk
import "stdio.h"

model Test {
    let str: char* = "Hello, World!"
}

fun main(): void {
    let test := summon Test();
    let str := test.str;
    banish test;

    printf("%s", str)
}