test/fail/02-if_wrong_type_guard.perk
import "stdio.h"

fun main(): void {
    if ("true") {
        printf("Hello, World!");
    }
}